--- a/index.html
+++ b/index.html
@@ -11,15 +11,9 @@
 </head>
 
 <body class="contain">
-	<div class="parallax item" style=" background-image: url('source/img/banner.jpg'); width: 100%; height: 60vh; background-position: top;"></div>
+	<div class="item" style=" background-position: top;"></div>
 	<header class="window">
-		<div>
-			<a href="index.html" class="button">Home</a>
-			<a href="about.html" class="button">About</a>
-			<a href="history.html" class="button">History</a>
-		</div>
-		<a style="padding: 1% 1%;font-size: 200%;float: right;" >vtuber brand</a>
-		<img src="source/img/logo.png" style="width: 6%;height: 100%;float: right;" /> 
+		<a style="padding: 1% 1%;font-size: 200%;float: right;" >A very unreliable FlaVR link tree</a>
     </header>
     <div class="item1 window">
 		<p align="center">ORG's</p>
@@ -35,11 +29,9 @@
 		</div>
 		<p align="center">Went independant</p>
 		<div class="flexbox" align="center">
-			<a href="https://twitter.com/Bonbon_Sena"><img class="profile" src="https://pbs.twimg.com/profile_images/1708459623215177728/69Hb_PP3_400x400.jpg"/></br>Sena bonbon</a>
-			<a href="https://twitter.com/AbigillAnemoia"><img class="profile" src="https://pbs.twimg.com/profile_images/1701047591327158272/oyeIZ6a5_400x400.jpg"/></br>Abigill Anemoia</a> 
-			<a href="https://twitter.com/NYANASEXTYN9"><img class="profile" src="https://pbs.twimg.com/profile_images/1693399718263459840/NiFkyYFj_400x400.jpg"/></br>Nyana Banyana</a> 
-			<a href="https://twitter.com/SourGrapeVA"><img class="profile" src="https://pbs.twimg.com/profile_images/1719064852969238528/LgJoM_Y1_400x400.jpg"/></br>Sawa Sama</a> 
-			<a href="https://twitter.com/YumiSharky"><img class="profile" src="https://pbs.twimg.com/profile_images/1721355827586457600/lcMIogal_400x400.jpg"/></br>Aqua Yumi(formerly shion)</a> 
+			<a href="https://twitter.com/Bonbon_Sena"><img class="profile" src="https://pbs.twimg.com/profile_images/1792636855730520064/CQ-6Rac9_400x400.jpg"/></br>Sena bonbon</a>
+			<a href="https://twitter.com/Nyanabanyana"><img class="profile" src="https://pbs.twimg.com/profile_images/1842424550522322945/KSzEiqaV_400x400.jpg"/></br>Nyana Banyana</a> 
+			<a href="https://twitter.com/SourGrapeVA"><img class="profile" src="https://pbs.twimg.com/profile_images/1857611356716888064/gFbP61nB_400x400.jpg"/></br>Sawa Sama</a> 
 		</div>
 		<p align="left">Active Tallents</p>
 		<div class="flexbox">
@@ -49,54 +41,29 @@
 				<a href="https://twitter.com/DrLolime"><img class="profile" src="source/img/drlolime.jpg"/></a>
 			</div>
 			<div class="button ">
-				<a>Dr. Lolime</a></br>
-				<a href="https://www.youtube.com/@drlolime"><img class="profile" src="source/img/yt.png"/></a>
-				<a href="https://twitter.com/DrLolimeFlaVR"><img class="profile" src="source/img/drlolimeflavr.jpg"/></a> </br>
-			</div>
-			<div class="button ">
 				<a>Minna Vanilla</a></br>
 				<a href="https://www.youtube.com/@BakedFreshFlaVR"><img class="profile" src="source/img/yt.png"/></a>
 				<a href="https://twitter.com/BakedFreshFlaVR"><img class="profile" src="source/img/mina.jpg"/></a>
-			</div>
-			<div class="button">
-				<a>Stela Fritter</a></br>
-				<a href="https://www.youtube.com/@stelafritter"><img class="profile" src="source/img/yt.png"/></a>
-				<a href="https://twitter.com/stelafritter"><img class="profile" src="source/img/stelafritter.jpg"/></a> 
-			</div>
-			<div class="button">
-				<a>Aminthe Araminta</a></br>
-				<a href="https://www.twitch.tv/aramintaaminthe"><img class="profile" src="source/img/ttv.png"/></a>
-				<a href="https://twitter.com/AmintheAraminta"><img class="profile" src="source/img/aminthe.jpg"/></a> 
 			</div>
 			<div class="button ">
 				<a>Raimi Ricotta</a></br>
 				<a href="https://www.youtube.com/@RaimiRicotta"><img class="profile" src="source/img/yt.png"/></a>
 				<a href="https://twitter.com/Raimi_Ricotta"><img class="profile" src="source/img/raimi.jpg"/></a> 
 			</div>
-			<div class="button ">
-				<a>Milkdrop Nayvell</a></br>
-				<a href="https://www.youtube.com/@nayvellmilkdrop"><img class="profile" src="source/img/yt.png"/></a>
-				<a href="https://twitter.com/MilkdropNayvell"><img class="profile" src="source/img/milkdrop.jpg"/></a> 
-			</div>
-			<div class="button">
-				<a>Mixin Mixie</a></br>
-				<a href="https://www.youtube.com/@mixiemixin"><img class="profile" src="source/img/yt.png"/></a>
-				<a href="https://twitter.com/MixinMixie"><img class="profile" src="source/img/mixin.jpg"/></a> 
-			</div>
 			<div class="button">
 				<a>Juwun</a></br>
 				<a href="https://www.youtube.com/@JuwunFlaVR"><img class="profile" src="source/img/yt.png"/></a>
 				<a href="https://twitter.com/JuwunFlaVR"><img class="profile" src="source/img/juwun.jpg"/></a> 
 			</div>
-			<div class="button">
-				<a>Azure Bash</a></br>
-				<a href="https://www.youtube.com/@VtuberAzureBashXIII"><img class="profile" src="source/img/yt.png"/></a>
-				<a href="https://twitter.com/AzureBashXIII"><img class="profile" src="source/img/azurebash.jpg"/></a> 
-			</div>
 			<div class="button ">
 				<a>Milliardo</a></br>
 				<a href="https://www.youtube.com/@MilliardoVT"><img class="profile" src="source/img/yt.png"/></a>
 				<a href="https://twitter.com/MilliardoVT"><img class="profile" src="source/img/milliardo.jpg"/></a> 
+			</div>
+			<div class="button">
+				<a>Mixin Mixie</a></br>
+				<a href="https://www.youtube.com/@mixiemixin"><img class="profile" src="source/img/yt.png"/></a>
+				<a href="https://twitter.com/MixinMixie"><img class="profile" src="source/img/mixin.jpg"/></a> 
 			</div>
 			<div class="button ">
 				<a>Sorin Sorrel</a></br>
@@ -108,54 +75,54 @@
 				<a href="https://www.youtube.com/channel/UCMri28jCVPcLVen_Xld6TaA"><img class="profile" src="source/img/yt.png"/></a>
 				<a href="https://twitter.com/TraubeSucker"><img class="profile" src="source/img/traube.jpg"/></a> 
 			</div>
+			<div class="button">
+				<a>Suziblue </a></br>
+				<a href="https://x.com/SuziblueO"><img class="profile" src="https://pbs.twimg.com/profile_images/1769806177100054528/-rvsgbzT_400x400.jpg"/></a>
+			</div>
+			<div class="button">
+				<a>Star A. Caimito</a></br>
+				<a href="https://www.youtube.com/channel/UCzKMjD2GEUeHOCtVGopyHRQ"><img class="profile" src="source/img/yt.png"/></a>
+				<a href="https://x.com/Deadmac1990"><img class="profile" src="https://pbs.twimg.com/profile_images/1774551641192087553/A-xWTz-h_400x400.jpg"/></a>
+			</div>
+			<div class="button ">
+				<a>Milkdrop Nayvell</a></br>
+				<a href="https://www.youtube.com/@nayvellmilkdrop"><img class="profile" src="source/img/yt.png"/></a>
+				<a href="https://twitter.com/MilkdropNayvell"><img class="profile" src="source/img/milkdrop.jpg"/></a> 
+			</div>
 			<div class="button ">
 				<a>Rika Paprika</a></br>
 				<a href="https://www.youtube.com/channel/UCw1cUr-r_-g-oda-ZXSTahQ"><img class="profile" src="source/img/yt.png"/></a>
 				<a href="https://twitter.com/Rika__Paprika"><img class="profile" src="source/img/rika.jpg"/></a> 
 			</div>
-			<div class="button ">
-				<a>Donna D Merlot</a></br>
-				<a href="https://www.youtube.com/@DonnaDmerlot"><img class="profile" src="source/img/yt.png"/></a>
-				<a href="https://twitter.com/DonnaDMerlot"><img class="profile" src="source/img/donna.jpg"/></a> 
+			<div class="button">
+				<a>DesmoTwanipop</a></br>
+				<a href="https://x.com/DesmoTwanipop"><img class="profile" src="https://pbs.twimg.com/profile_images/1781769811128627200/h8RRq2iB_400x400.jpg"/></a>
 			</div>
 			<div class="button">
-				<a>Star A. Caimito</a></br>
-				<a href="https://www.youtube.com/channel/UCzKMjD2GEUeHOCtVGopyHRQ"><img class="profile" src="source/img/yt.png"/></a>
-				<a href="https://twitter.com/Deadmac1990"><img class="profile" src="https://pbs.twimg.com/profile_images/1662480365800267776/bR1hjp2P_400x400.jpg"/></a>
+				<a>Jaki Kyoryu</a></br>
+				<a href="https://twitter.com/Jaki_Kyoryu"><img class="profile" src="https://pbs.twimg.com/profile_images/1636218178006302720/9EcgSCKS_400x400.jpg"/></a>
 			</div>
 			<div class="button">
-				<a>Coconut Blanc</a></br>
-				<a href="https://www.youtube.com/@Coconut_Blanc"><img class="profile" src="source/img/yt.png"/></a>
-				<a href="https://twitter.com/coconut_blanc"><img class="profile" src="https://pbs.twimg.com/profile_images/1642863823051710466/4XdVPOBp_400x400.jpg"/></a>
+				<a>Azure Bash</a></br>
+				<a href="https://www.youtube.com/@VtuberAzureBashXIII"><img class="profile" src="source/img/yt.png"/></a>
+				<a href="https://twitter.com/AzureBashXIII"><img class="profile" src="source/img/azurebash.jpg"/></a> 
 			</div>
 		</div>
 		
 		<p align="left">Graduated</p>
 		<div class="flexbox">
 			<div class="button">
-				<a>Elaina </a></br>
-				<a href="https://twitter.com/ElainaSlaVR"><img class="profile" src="https://pbs.twimg.com/profile_images/1640411095549501441/Y-O77TSN_400x400.jpg"/></a>
+				<a>Abigill Anemoia </a></br>
+				<a href="https://twitter.com/AbigillAnemoia"><img class="profile" src="https://pbs.twimg.com/profile_images/1701047591327158272/oyeIZ6a5_400x400.jpg"/></a>
 			</div>
 			<div class="button">
-				<a>Alunette Mignon </a></br>
-				<a href="https://twitter.com/Alunette_Mignon"><img class="profile" src="https://pbs.twimg.com/profile_images/1596268662519783425/cpqd3rQK_400x400.jpg"/></a>
+				<a>Elaina </a></br>
+				<a href="https://twitter.com/ElainaSlaVR"><img class="profile" src="https://pbs.twimg.com/profile_images/1640411095549501441/Y-O77TSN_400x400.jpg"/></a>
 			</div>
 		</div>
 		
 		<p align="left">Missing in action</p>
 		<div class="flexbox">
-			<div class="button">
-				<a>DesmoTwanipop</a></br>
-				<a href="https://twitter.com/DesmoTwanipop"><img class="profile" src="https://pbs.twimg.com/profile_images/1672129865313845248/z5dTuqw4_400x400.jpg"/></a>
-			</div>
-			<div class="button">
-				<a>The Pua Himawari</a></br>
-				<a href="https://twitter.com/ThePuaHimawari"><img class="profile" src="https://pbs.twimg.com/profile_images/1648854829937360897/lxhtPWUQ_400x400.jpg"/></a>
-			</div>
-			<div class="button">
-				<a>Jaki Kyoryu</a></br>
-				<a href="https://twitter.com/Jaki_Kyoryu"><img class="profile" src="https://pbs.twimg.com/profile_images/1636218178006302720/9EcgSCKS_400x400.jpg"/></a>
-			</div>
 			<div class="button">
 				<a>NorikoMinorin</a></br>
 				<a href="https://twitter.com/NorikoMinorin"><img class="profile" src="https://pbs.twimg.com/profile_images/1617922692539195392/xJ2KmyLZ_400x400.jpg"/></a>
@@ -219,10 +186,6 @@
 			<div class="button">
 				<a>MariaSangriaVT</a></br>
 				<a href="https://twitter.com/MariaSangriaVT"><img class="profile" src="https://pbs.twimg.com/profile_images/1669584040490594304/EI13HpO0_400x400.jpg"/></a>
-			</div>
-			<div class="button">
-				<a>GumiPopu(deleted acc)</a></br>
-				<a href="https://twitter.com/GumiPopu"><img class="profile" src="https://i.pinimg.com/originals/3f/07/99/3f079943b9d35df7cef9636f41d0e89a.jpg"/></a>
 			</div>
 			<div class="button">
 				<a>TsumoMiyaga</a></br>
