Update index.html added

--- a/index.html
+++ b/index.html
@@ -55,10 +55,20 @@
 				<a href="https://www.youtube.com/@JuwunFlaVR"><img class="profile" src="source/img/yt.png"/></a>
 				<a href="https://twitter.com/JuwunFlaVR"><img class="profile" src="source/img/juwun.jpg"/></a> 
 			</div>
+			<div class="button">
+				<a>Cara Malone</a></br>
+				<a href="https://www.youtube.com/@MaloneCara"><img class="profile" src="source/img/yt.png"/></a>
+				<a href="https://x.com/CaraMaloneVT"><img class="profile" src="https://pbs.twimg.com/profile_images/1846856823787134976/RqUy9WSH_400x400.jpg"/></a> 
+			</div>
+			<div class="button">
+				<a>Chika Champon</a></br>
+				<a href="https://www.youtube.com/@Chika_Champon"><img class="profile" src="source/img/yt.png"/></a>
+				<a href="https://x.com/chika_champon"><img class="profile" src="https://pbs.twimg.com/profile_images/1858288477290590208/encLUGCq_400x400.jpg"/></a> 
+			</div>
 			<div class="button ">
 				<a>Milliardo</a></br>
 				<a href="https://www.youtube.com/@MilliardoVT"><img class="profile" src="source/img/yt.png"/></a>
-				<a href="https://twitter.com/MilliardoVT"><img class="profile" src="source/img/milliardo.jpg"/></a> 
+				<a href="https://x.com/CaraMaloneVT"><img class="profile" src="source/img/milliardo.jpg"/></a> 
 			</div>
 			<div class="button">
 				<a>Mixin Mixie</a></br>
@@ -77,12 +87,34 @@
 			</div>
 			<div class="button">
 				<a>Suziblue </a></br>
-				<a href="https://x.com/SuziblueO"><img class="profile" src="https://pbs.twimg.com/profile_images/1769806177100054528/-rvsgbzT_400x400.jpg"/></a>
+				<a href="https://www.youtube.com/@magicwizardhat"><img class="profile" src="source/img/yt.png"/></a>
+				<a href="https://x.com/MagicWizardHat"><img class="profile" src="https://pbs.twimg.com/profile_images/1771686862840614913/uMgQDkge_400x400.jpg"/></a>
+			</div>
+			<div class="button">
+				<a>Donna Darkstar </a></br>
+				<a href="https://www.twitch.tv/donnadarkstar"><img class="profile" src="source/img/ttv.png"/></a>
+				<a href="https://www.youtube.com/channel/UCfMBgj-T3KDJgaD68qvhDLw"><img class="profile" src="source/img/yt.png"/></a>
+				<a href="https://x.com/Donna_Darkstar"><img class="profile" src="https://pbs.twimg.com/profile_images/1825808987658264576/7uMdu-O0_400x400.jpg"/></a>
 			</div>
 			<div class="button">
 				<a>Star A. Caimito</a></br>
 				<a href="https://www.youtube.com/channel/UCzKMjD2GEUeHOCtVGopyHRQ"><img class="profile" src="source/img/yt.png"/></a>
 				<a href="https://x.com/Deadmac1990"><img class="profile" src="https://pbs.twimg.com/profile_images/1774551641192087553/A-xWTz-h_400x400.jpg"/></a>
+			</div>
+			<div class="button">
+				<a>Lulu Teala </a></br>
+				<a href="https://www.youtube.com/@LuluTeala"><img class="profile" src="source/img/yt.png"/></a>
+				<a href="https://x.com/LuluTeala"><img class="profile" src="https://pbs.twimg.com/profile_images/1801776369271246848/qfqeW3P5_400x400.jpg"/></a>
+			</div>
+			<div class="button">
+				<a>Neo Pawlino</a></br>
+				<a href="https://www.youtube.com/@NeoPawlino"><img class="profile" src="source/img/yt.png"/></a>
+				<a href="https://x.com/NeoPawlino"><img class="profile" src="https://pbs.twimg.com/profile_images/1838041845722763264/xQPjbv76_400x400.jpg"/></a>
+			</div>
+			<div class="button">
+				<a>Grub</a></br>
+				<a href="https://www.youtube.com/@grubhandler"><img class="profile" src="source/img/yt.png"/></a>
+				<a href="https://x.com/grubhandler"><img class="profile" src="https://pbs.twimg.com/profile_images/1806959711490801664/TXjLKj0B_400x400.jpg"/></a>
 			</div>
 			<div class="button ">
 				<a>Milkdrop Nayvell</a></br>
@@ -103,8 +135,11 @@
 				<a href="https://twitter.com/Jaki_Kyoryu"><img class="profile" src="https://pbs.twimg.com/profile_images/1636218178006302720/9EcgSCKS_400x400.jpg"/></a>
 			</div>
 			<div class="button">
+				<a>the other Suziblue </a></br>
+				<a href="https://x.com/SuziblueO"><img class="profile" src="https://pbs.twimg.com/profile_images/1769806177100054528/-rvsgbzT_400x400.jpg"/></a>
+			</div>
+			<div class="button">
 				<a>Azure Bash</a></br>
-				<a href="https://www.youtube.com/@VtuberAzureBashXIII"><img class="profile" src="source/img/yt.png"/></a>
 				<a href="https://twitter.com/AzureBashXIII"><img class="profile" src="source/img/azurebash.jpg"/></a> 
 			</div>
 		</div>
