--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
 				<a href="https://www.youtube.com/@grubhandler"><img class="profile" src="source/img/yt.png"/></a>
 				<a href="https://x.com/grubhandler"><img class="profile" src="https://pbs.twimg.com/profile_images/1806959711490801664/TXjLKj0B_400x400.jpg"/></a>
 			</div>
+			<div class="button">
+				<a>the other Suziblue </a></br>
+				<a href="https://x.com/SuziblueO"><img class="profile" src="https://pbs.twimg.com/profile_images/1769806177100054528/-rvsgbzT_400x400.jpg"/></a>
+			</div>
 			<div class="button ">
 				<a>Milkdrop Nayvell</a></br>
 				<a href="https://www.youtube.com/@nayvellmilkdrop"><img class="profile" src="source/img/yt.png"/></a>
@@ -126,6 +130,16 @@
 				<a href="https://www.youtube.com/channel/UCw1cUr-r_-g-oda-ZXSTahQ"><img class="profile" src="source/img/yt.png"/></a>
 				<a href="https://twitter.com/Rika__Paprika"><img class="profile" src="source/img/rika.jpg"/></a> 
 			</div>
+			<div class="button ">
+				<a>Rika Paprika 🇨🇱</a></br>
+				<a href="https://www.youtube.com/@RikaPaprikaFlaVRES"><img class="profile" src="source/img/yt.png"/></a>
+				<a href="https://x.com/RikaFlaVR"><img class="profile" src="https://pbs.twimg.com/profile_images/1809152588421472256/caDFqNCb_400x400.jpg"/></a> 
+			</div>
+			<div class="button ">
+				<a>Kohi Aoife </a></br>
+				<a href="https://www.twitch.tv/kohiaoife"><img class="profile" src="source/img/ttv.png"/></a>
+				<a href="https://x.com/KohiAoife"><img class="profile" src="https://pbs.twimg.com/profile_images/1747843552577536000/GtRySzO6_400x400.jpg"/></a> 
+			</div>
 			<div class="button">
 				<a>DesmoTwanipop</a></br>
 				<a href="https://x.com/DesmoTwanipop"><img class="profile" src="https://pbs.twimg.com/profile_images/1781769811128627200/h8RRq2iB_400x400.jpg"/></a>
@@ -133,10 +147,6 @@
 			<div class="button">
 				<a>Jaki Kyoryu</a></br>
 				<a href="https://twitter.com/Jaki_Kyoryu"><img class="profile" src="https://pbs.twimg.com/profile_images/1636218178006302720/9EcgSCKS_400x400.jpg"/></a>
-			</div>
-			<div class="button">
-				<a>the other Suziblue </a></br>
-				<a href="https://x.com/SuziblueO"><img class="profile" src="https://pbs.twimg.com/profile_images/1769806177100054528/-rvsgbzT_400x400.jpg"/></a>
 			</div>
 			<div class="button">
 				<a>Azure Bash</a></br>
