--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 			</div>
 			<div class="button">
 				<a>the other Suziblue </a></br>
+				<a href="https://www.youtube.com/channel/UC9oxwobr3bnSiE505h9WPWQ"><img class="profile" src="source/img/yt.png"/></a>
 				<a href="https://x.com/SuziblueO"><img class="profile" src="https://pbs.twimg.com/profile_images/1769806177100054528/-rvsgbzT_400x400.jpg"/></a>
 			</div>
 			<div class="button ">
