--- a/index.html
+++ b/index.html
@@ -117,9 +117,19 @@
 				<a href="https://x.com/grubhandler"><img class="profile" src="https://pbs.twimg.com/profile_images/1806959711490801664/TXjLKj0B_400x400.jpg"/></a>
 			</div>
 			<div class="button">
-				<a>the other Suziblue </a></br>
-				<a href="https://www.youtube.com/channel/UC9oxwobr3bnSiE505h9WPWQ"><img class="profile" src="source/img/yt.png"/></a>
-				<a href="https://x.com/SuziblueO"><img class="profile" src="https://pbs.twimg.com/profile_images/1769806177100054528/-rvsgbzT_400x400.jpg"/></a>
+				<a>Grub</a></br>
+				<a href="https://www.youtube.com/@grubhandler"><img class="profile" src="source/img/yt.png"/></a>
+				<a href="https://x.com/grubhandler"><img class="profile" src="https://pbs.twimg.com/profile_images/1806959711490801664/TXjLKj0B_400x400.jpg"/></a>
+			</div>
+			<div class="button">
+				<a>The Amanda Splatts Project </a></br>
+				<a href="https://www.youtube.com/@AmandaSplatts"><img class="profile" src="source/img/yt.png"/></a>
+				<a href="https://x.com/AmandaSplatts"><img class="profile" src="https://pbs.twimg.com/profile_images/1851906981063163904/jK2xPDH3_400x400.jpg"/></a>
+			</div>
+			<div class="button">
+				<a>Kiri Bloodrose</a></br>
+				<a href="https://www.twitch.tv/KiriBloodrose"><img class="profile" src="source/img/ttv.png"/></a>
+				<a href="https://x.com/KiriBloodrose"><img class="profile" src="https://pbs.twimg.com/profile_images/1775064100445319168/ktpjXsfH_400x400.jpg"/></a>
 			</div>
 			<div class="button ">
 				<a>Milkdrop Nayvell</a></br>
