accidently had replaced wrong links

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<div class="button ">
 				<a>Milliardo</a></br>
 				<a href="https://www.youtube.com/@MilliardoVT"><img class="profile" src="source/img/yt.png"/></a>
-				<a href="https://x.com/CaraMaloneVT"><img class="profile" src="source/img/milliardo.jpg"/></a> 
+				<a href="https://x.com/MilliardoVT"><img class="profile" src="source/img/milliardo.jpg"/></a> 
 			</div>
 			<div class="button">
 				<a>Mixin Mixie</a></br>
@@ -145,6 +145,11 @@
 				<a>Kohi Aoife </a></br>
 				<a href="https://www.twitch.tv/kohiaoife"><img class="profile" src="source/img/ttv.png"/></a>
 				<a href="https://x.com/KohiAoife"><img class="profile" src="https://pbs.twimg.com/profile_images/1747843552577536000/GtRySzO6_400x400.jpg"/></a> 
+			</div>
+			<div class="button">
+				<a>The other Suziblue</a></br>
+				<a href="https://www.twitch.tv/suziblue_overtime_oneal"><img class="profile" src="source/img/ttv.png"/></a>
+				<a href="https://x.com/SuziblueO"><img class="profile" src="https://static-cdn.jtvnw.net/jtv_user_pictures/8c45e661-bdd4-4de5-a692-8890693f089b-profile_image-70x70.png"/></a>
 			</div>
 			<div class="button">
 				<a>DesmoTwanipop</a></br>
