scummy self plug added

--- a/index.html
+++ b/index.html
@@ -280,6 +280,6 @@
 		</svg>github source for page</a>
 		<br>
 		<br>
-		<a>If you wanna add your self to this page or request a change open a issue asking in the github repo</a>
+		<a>If you wanna add your self to this page or request a change open a issue asking in the github repo, or ask on twitter @shittotaro</a>
 	</div>
 </body>
